--- a/src/components/Experience/experience.module.scss
+++ b/src/components/Experience/experience.module.scss
@@ -1,7 +1,7 @@
 .container {
     section {
         margin-top: 2rem;
-        border-bottom: 1px solid var(--light-navy) !important;
+        // border-bottom: 1px solid var(--light-navy) !important;
 
         h4 {
             font-size: 1.5rem;
