inlined scrollToTop function and turned off button on mobile

--- a/src/components/Buttons/Top/top-button.module.scss
+++ b/src/components/Buttons/Top/top-button.module.scss
@@ -4,4 +4,11 @@
     position: fixed;
     bottom: 12px;
     right: 12px;
+
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        display: none;
+    }
 }
